--- a/resources/styles/partials/_header.scss
+++ b/resources/styles/partials/_header.scss
@@ -10,7 +10,7 @@
   @media (min-width: 992px) {
     position: sticky;
     top: 0;
-    z-index: 100;
+    z-index: 500;
   }
 
   @media (max-width: 991px) {
